# geojsonvt

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: clip.rs  convert.rs  geojson_vt.rs  lib.rs  simplify.rs  tile.rs  types.rs  wrap.rs
tests/: test_full.rs  test_multi_world.rs
tests/fixtures/: dateline-tiles.json  dateline.json  feature-tiles.json  feature.json
